Remove deprecated methods from Value types and related usage.